# dns-cli-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yaml  release.yml  update-brew-tap.yml
scripts/: do-release.sh
src/: cli_program.rs  cloudflare_provider.rs  config.rs  discord_webhook.rs  dns_provider.rs  godaddy_api.rs  ip_handler.rs  main.rs  webhook_notifier.rs
