[package]
name = "godaddy-cli-tools"
version = "0.1.3"
edition = "2021"

authors = ["Hugo Persson <hugo.e.persson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/Hugo-Persson/godaddy-cli-tools"
repository = "https://github.com/Hugo-Persson/godaddy-cli-tools"
keywords = ["cli", "godaddy", "dns"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
home = "0.5.5"
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.105"
tokio = {version = "1.32.0", features = ["full"]}
