[package]
name = "dns-cli-tools"
version = "0.1.9"
edition = "2021"

authors = ["Hugo Persson <hugo.e.persson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A command line tool for managing DNS records, currenty support is Cloudflare"
readme = "README.md"
homepage = "https://github.com/Hugo-Persson/dns-cli-tools"
repository = "https://github.com/Hugo-Persson/dns-cli-tools"
keywords = ["cli", "cloudflare", "dns"]
categories = ["command-line-utilities"]

[[bin]]
name = "dns-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
cloudflare = "0.11.0"
home = "0.5.5"
inquire = "0.7.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
